@@ -2772,6 +2772,7 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory {
         dfsClientConf.socketTimeout);
       peer = TcpPeerServer.peerFromSocketAndKey(sock, 
           getDataEncryptionKey());
+      peer.setReadTimeout(dfsClientConf.socketTimeout);
       success = true;
       return peer;
     } finally {
