@@ -11,6 +11,8 @@ Release 2.6.0 - UNRELEASED
     HDFS-6616. Add exclude-datanodes feature to WebHDFS redirection so that it
     will not redirect retries to the same datanode. (zhaoyunjiong via szetszwo)
 
+    HDFS-7005. DFS input streams do not timeout. (Daryn Sharp)
+
   OPTIMIZATIONS
 
   BUG FIXES
